[package]
name = "zcsi-etcdvd3-test"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.3"
fnv = "*"
twox-hash = "*"
etcdv3-rs={ git="https://github.com/apanda/etcdv3-rs" }

[features]
default = []
print = []
